--- a/korepetycje-front/package.json
+++ b/korepetycje-front/package.json
@@ -14,6 +14,7 @@
     "leaflet-gps": "^1.7.6",
     "lodash.debounce": "4.0.8",
     "vue": "^2.5.17",
+    "vue-date": "^1.2.0",
     "vue-form-factory": "^0.1.7",
     "vue-multiselect": "^2.1.3",
     "vue-resource": "^1.5.1",
