--- a/korepetycje-front/package.json
+++ b/korepetycje-front/package.json
@@ -20,6 +20,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-star-rating": "^1.6.1",
+    "vue2-datepicker": "^2.6.3",
     "vue2-leaflet": "^1.2.3",
     "vue2-leaflet-geosearch": "^1.0.1",
     "vuex": "^3.0.1"
