--- a/korepetycje-front/package.json
+++ b/korepetycje-front/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.5.17",
     "vue-date": "^1.2.0",
     "vue-form-factory": "^0.1.7",
+    "vue-full-calendar": "2.7.0",
     "vue-multiselect": "^2.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
