--- a/korepetycje-front/package.json
+++ b/korepetycje-front/package.json
@@ -13,6 +13,7 @@
     "leaflet-geosearch": "^2.7.0",
     "leaflet-gps": "^1.7.6",
     "lodash.debounce": "4.0.8",
+    "lodash.get": "4.4.2",
     "vue": "^2.5.17",
     "vue-date": "^1.2.0",
     "vue-form-factory": "^0.1.7",
