--- a/korepetycje-front/package.json
+++ b/korepetycje-front/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "0.18.0",
     "css-star-rating": "^1.2.4",
+    "fullcalendar": "^3.9.0",
     "leaflet-geosearch": "^2.7.0",
     "leaflet-gps": "^1.7.6",
     "lodash.debounce": "4.0.8",
