--- a/korepetycje-front/package.json
+++ b/korepetycje-front/package.json
@@ -23,6 +23,7 @@
     "vue-multiselect": "^2.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
+    "vue-scrollto": "2.13.0",
     "vue-star-rating": "^1.6.1",
     "vue2-datepicker": "^2.6.3",
     "vue2-leaflet": "^1.2.3",
